# meridian

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-04-hosts-management.md  2026-04-04-native-desktop-style.md
docs/superpowers/specs/: 2026-04-04-hosts-management-design.md  2026-04-04-icon-redesign-design.md  2026-04-04-native-desktop-style-design.md  2026-04-04-p0-p3-improvements-design.md
scripts/: prepare-nginx.ps1  prepare-nginx.sh
specs/: design.md  index.md  requirements.md  spec_access.md  spec_cert.md  spec_config_engine.md  spec_monitoring.md  spec_nginx_manager.md  spec_proxy.md  spec_store.md  spec_ui.md  status.md  tasks.md
specs/design-preview/: dashboard.html
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  hosts_manager.rs  lib.rs  main.rs  validators.rs
src-tauri/src/acme_client/: mod.rs  renewal.rs
src-tauri/src/cert_manager/: mod.rs
src-tauri/src/commands/: access.rs  acme.rs  cert.rs  dns_credential.rs  engine.rs  hosts.rs  logs.rs  metrics.rs  mod.rs  proxy.rs  settings.rs
src-tauri/src/config_engine/: conflict.rs  error_pages.rs  http_config.rs  main_config.rs  mod.rs  stream_config.rs
src-tauri/src/dns_provider/: alidns.rs  cloudflare.rs  dnspod.rs  mod.rs  route53.rs
src-tauri/src/metrics/: aggregator.rs  mod.rs  parser.rs
src-tauri/src/nginx_manager/: mod.rs
src-tauri/src/store/: access_repo.rs  acme_repo.rs  cert_repo.rs  dns_credential_repo.rs  hosts_repo.rs  mod.rs  models.rs  proxy_repo.rs  settings_repo.rs
src/components/layout/: AppShell.tsx  ContentToolbar.tsx  Sidebar.tsx  Titlebar.tsx
src/components/proxy/: ProxyForm.tsx
src/components/ui/: Badge.tsx  Button.tsx  Dialog.tsx  Input.tsx  Select.tsx  (+3 more)
src/hooks/: useApiError.ts  usePlatform.ts
src/lib/: api.ts
src/pages/: AccessPage.tsx  CertsPage.tsx  DashboardPage.tsx  HostsPage.tsx  LogsPage.tsx  MonitorPage.tsx  NotFoundPage.tsx  ProxyFormPage.tsx  SettingsPage.tsx
src/stores/: access-store.ts  cert-store.ts  dns-credential-store.ts  engine-store.ts  hosts-store.ts  proxy-store.ts  settings-store.ts  toast-store.ts
src/types/: index.ts
(+14 files in other folders)
