[package]
name = "meridian"
version = "0.1.0"
description = "轻渡 · Meridian - Local Proxy Manager"
authors = ["mpan"]
edition = "2021"

[lib]
name = "meridian_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rcgen = "0.12"
tokio = { version = "1", features = ["full"] }
instant-acme = "0.7"
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
async-trait = "0.1"
url = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
window-vibrancy = "0.7.1"
r2d2 = "0.8"
r2d2_sqlite = "0.24"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }
objc2-foundation = "0.3"
